--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="main">
         <div class="curriculam">
             <h3 class="title">Standard Curriculum</h3>
             <div class="curriculam_box">
@@ -151,7 +151,7 @@
             <div class="footer_contant">
                 <div class="footer_logo">
                     <div class="footer_img">
-                        <img src="assets/logo.png" alt="">
+                        <img src="assets/logo1.png" alt="">
                     </div>
                     <div class="footer_title">
                         <h3>Kids <br>
@@ -167,23 +167,41 @@
                 <div class="footer_about_title">
                     <h4>About School</h4>
                 </div>
-                <div class="footer_p " >
-                    <div class="bar" >
-                        <a href="" >Home</a>
-                    </div class="bar">
+                <div class="footer_p ">
+                    <div class="bar">
+                        <a href="">Home</a>
+                    </div>
                     <div class="bar">
                         <a href="">About</a>
                     </div>
                     <div class="bar">
-                        <a href="" > Facilities</a>
-                    </div class="bar">
-                    <div>
+                        <a href=""> Facilities</a>
+                    </div>
+                    <div class="bar">
                         <a href=""> Admission</a>
                     </div>
                 </div>
 
             </div>
-            <div class="footer_contant"></div>
+            <div class="footer_contant">
+                <h3>Keep In Touch</h3>
+                <div class="icon_flex">
+                    <div class="icon">
+                        <img src="assets/fb.png" alt="">
+                    </div>
+                    <div class="icon">
+                        <img src="assets/dribble.png" alt="">
+                    </div>
+                    <div class="icon">
+                        <img src="assets/twitter.png" alt="">
+                    </div>
+                    <div class="icon">
+                        <img src="assets/google+.png" alt="">
+                    </div>
+
+                </div>
+                
+            </div>
         </div>
     </footer>
 </body>
