--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <body class="Quicksand">
     <header>
+        <marquee behavior="" direction="">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus incidunt fuga recusandae saepe iusto optio deserunt quibusdam animi voluptate neque eius, aspernatur aliquid ut, delectus at. Vel, odio? Eum, ut!
+        </marquee>
         <nav class="nav_row">
             <div class="img ">
                 <img src="assets/logo.png" alt="" height="62px" width="52.61px">
